-Catacombs curse debuff no longer prevents you from placing blocks
-Catacomb bricks and walls can now be broken with pickaxes/hammers once the respective boss at the bottom of that layer has been defeated (daffodil for layer 1 bricks, big bone for layer 2 bricks) (HOWEVER, the actual boss arenas and pandora's box arena are still completely indestructable. This also only applies to new worlds, in old worlds the arenas are not made out of the new unbreakable block)




~BUGS AND OTHER FIXES~

-Fixed spooky mod helmets/masks with custom drawing (such as glowmasks and extended helmets) drawing incorrectly when gravity is flipped
-Fixed bug with many spooky mod objects (such as custom trees, giant glowshrooms, spider grotto old hunter piles, bloom plants, ect) not being in the correct positions when using snapshot mode to take screenshots
-Fixed issue where spooky biome ambient grass and vines wouldnt be destroyed when converted by clentaminator solutions
-Fixed brown solution not converting spooky mod biomes into a forest biome
-Fixed frank the goblin's hands despawning if the player gets too far away from him
-Fixed spooky mod vines growing longer than 10 tiles during world generation
-Fixed spi-ops armor setbonus tooltip saying spider stealth stuns enemies as this was a scrapped idea
-Fixed gore mask, living flesh mask, living flesh legs, and skull totem buff giving double damage increase to whips
-Fixed living flesh mask still giving extra whip range
-Fixed gore mask giving 3 extra minion slots instead of 2
-Fixed spooky mod flails not dealing reduced damage while in being spun around
-Fixed dreadful clarinet note projectiles not fading out correctly
-Fixed bluefords casting animation playing way too early before he actually shields another ghost bandit
-Fixed issue where catacomb crushers basically would never spawn due to an issue with their upward tile check when spawning on ceilings
-Fixed catacomb crushers colliding with platforms when slamming down