@@ -231,7 +231,7 @@ TarBlobSmallMouth: Known for their powerful jaws, the Pharaosaurus Regina once d
 //vegetable garden
 CornMage1: These corn mages can shoot off pieces of corn from their bodies, which will pop afterward due to heat inside of it.
 CornMage2: They can shoot out giant pieces of popcorn which can become chaotic in the vegetable caves.
-GhostPepper: Ancient pepper apparitions that live in the vegetable garden. Their face converys malicious intent.
+GhostPepper: Ancient pepper apparitions that live in the vegetable garden. Their facial expression conveys their malicious intent.
 HoppingPotato1: They hop around the vegetable gardens after growing to maturity.
 HoppingPotato2: Their jumping is chaotic and random. They also taste good in various food products.
 HoppingPotato3: No one knows how these potatos are able to even jump around. At least it looks funny.
