@@ -460,3 +460,4 @@ GarlicOoze.DisplayName: Garlic Ooze
 TarBubble.DisplayName: Tar Bubble
 CornKernal.DisplayName: Corn Kernal
 CornPopped.DisplayName: Popcorn
+HydroraptorSpit.DisplayName: Tar Spit
