@@ -99,5 +99,6 @@ Miscellaneous:
 -Fixed spooky mod flails not dealing reduced damage while in being spun around
 -Fixed dreadful clarinet note projectiles not fading out correctly
 -Fixed bluefords casting animation playing way too early before he actually shields another ghost bandit
--Fixed issue where catacomb crushers basically would never spawn due to an issue with their upward tile check when spawning on ceilings
--Fixed catacomb crushers colliding with platforms when slamming down
+-Fixed issue where ancient crushers basically would never spawn due to an issue with their upward tile check when spawning on ceilings
+-Fixed ancient crushers colliding with platforms when slamming down
+-Fixed cemetery biome dungeon chest not having a sell price
